tsc client.ts creates a 2MB client.d.ts, this is due the fact all types are generated in a single file.
To generate apis splitted, we need to assign a tag to each of them.

Once the apis gets generated using group mode "tag-file" we need to make sure endpoints are exported.

This is due the fact zodios::mergeApi is in reality a mapApi method creating a 2-level deep tree with a root and 1 below layer of childs each-one with a dedicated named branch arc.

So pratically we would have to merge apis with an array, apis starting from the exported endpoint object.

Temporary stopping this work, as I smell it's the wrong direction, and i should instead seek for a better approach of tsc making it wise enough to understand type redundancy even without splitting them to separated files.
